# matter

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
android/: build.gradle
docs/: CLUSTER_CATALOG.md
example/: MATTER_LINUX_SIMULATOR.md  README.md  pubspec.yaml
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/MatterExt/: Info.plist  MatterExt.entitlements
example/ios/Runner/: Info.plist  Runner.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ble_manager.dart  commissioning_controller.dart  commissioning_page.dart  control_page.dart  data.dart  device_provisioning.dart  home_page.dart  onboarding.dart  wifi_input.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: widget_test.dart
ios/: flutter_matter.podspec
ios/Classes/: DeviceControlHandle.m
ios/Classes/Framework Helpers/: DefaultsUtils.m
lib/: flutter_matter.dart  flutter_matter_method_channel.dart
lib/src/: ble.dart  controller.dart  exception.dart
tool/: generate_cluster_catalog.dart  generate_cluster_catalog_doc.dart
tools/: matter_linux_simulator_wsl2.sh
tools/matter_sim/: .gitignore  README.md  pyproject.toml
tools/matter_sim/src/matter_sim/: __init__.py  chip_repo.py  cli.py  config.py  payload.py  simulator.py  verify.py
tools/matter_sim/tests/: test_payload.py
(+18 files in other folders)
