[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matter-sim"
version = "0.1.0"
description = "Launch and supervise a Matter Linux all-clusters simulator for flutter_matter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
verify = []

[project.scripts]
matter-sim = "matter_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
